# realsense_wrapper

./: Cargo.toml  bindings.rs  build.rs  readme.md
examples/: blackwhite.rs  color.rs  connect.rs  depth.rs  image_data.rs
realsense_c_examples/: color.c  depth.c  distance.c
src/: bindings.rs  dump.md  frame.rs  image_data.rs  lib.rs  point.rs  point_cloud.rs  realsense_init.rs  stream_profile.rs  utils.rs
src/enum/: format.rs  stream.rs
src/types/: format.rs  mod.rs  stream.rs
