[package]
name = "realsense_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5" }
num-traits = "0.2"
num-derive = "0.3"
ndarray = "0.15.6"

[build-dependencies]
bindgen = "0.63.0"
